--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-discord.py
-motor
-python-dotenv
-flask
+discord.py[voice]>=2.3.2
+motor>=3.3.2
+python-dotenv>=1.0.0
+Flask>=2.3.2
+PyNaCl>=1.5.0
+dnspython>=2.4.2
