--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-discord.py[voice]>=2.3.2
-motor>=3.3.2
+discord.py>=2.3.0
+motor>=3.3.0
 python-dotenv>=1.0.0
-Flask>=2.3.2
-PyNaCl>=1.5.0
-dnspython>=2.4.2
+Flask>=2.3.0
 aiohttp>=3.8.0
+asyncio
