--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-discord.py>=2.3.0
-motor>=3.3.0
-python-dotenv>=1.0.0
-Flask>=2.3.0
-aiohttp>=3.8.0
-pytz>=2023.3
-dnspython>=2.4.2
-PyNaCl>=1.5.0
+discord.py
+motor
+python-dotenv
+Flask
+aiohttp
+pytz
+dnspython
+PyNaCl
